# studio-offline

client/studio_offline/src/: hooks.rs
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: assets.rs  mod.rs  oauth.rs  upload.rs
static/auth/OAuth/: authorize.html  openid.json  userinfo.json
static/images/thumbnails/: games.json
