[package]
name = "studio_offline_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
hex = "0.4.3"
inquire = "0.9.1"
md5 = "0.8.0"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["stream", "gzip", "deflate", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4"] }
